// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createChatJobs() when useReplyAPI 1`] = `
Array [
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 0,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
      ],
      "replyToken": "__REPLY_TOKEN__",
    },
    "entry": "message/reply",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
      ],
      "replyToken": "__REPLY_TOKEN__",
    },
    "entry": "message/reply",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "id": 7,
    },
    "entry": "bar",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 8,
        },
      ],
      "replyToken": "__REPLY_TOKEN__",
    },
    "entry": "message/reply",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "id": 9,
    },
    "entry": "baz",
    "threadUid": "line:default:user:john",
  },
]
`;

exports[`createChatJobs() work 1`] = `
Array [
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 0,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
      ],
      "to": "john",
    },
    "entry": "message/push",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
      ],
      "to": "john",
    },
    "entry": "message/push",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "id": 7,
    },
    "entry": "bar",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 8,
        },
      ],
      "to": "john",
    },
    "entry": "message/push",
    "threadUid": "line:default:user:john",
  },
  Object {
    "body": Object {
      "id": 9,
    },
    "entry": "baz",
    "threadUid": "line:default:user:john",
  },
]
`;

exports[`createMulticastJobs() create job of multicast api 1`] = `
Array [
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 0,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
      ],
      "to": Array [
        "foo",
        "bar",
        "baz",
      ],
    },
    "entry": "message/multicast",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
        Object {
          "id": 7,
        },
      ],
      "to": Array [
        "foo",
        "bar",
        "baz",
      ],
    },
    "entry": "message/multicast",
  },
]
`;
